WIP: Visual changes to addmonitor wizard; adding a new section for integrations management.

--- a/public/less/rearview.less
+++ b/public/less/rearview.less
@@ -563,6 +563,16 @@ hr {
         border     : 1px solid #b6b3a6;
         color      : #adabac;
     }
+    
+    input.input-lg,
+    textarea.input-lg,
+    select.input-lg {
+        height: 55px;
+    }
+    
+    input.input-lg {
+        font-size: 2.5em;
+    }
 
     input.input-minutes-back {
         width : 73px;
@@ -1253,6 +1263,10 @@ hr {
                 max-width : none !important;
             }
         }
+    }
+    
+    table.integrations-list td {
+        padding: 2px 10px 0 0;
     }
 
     /* jquery ui style adjustments */
