--- a/public/less/rearview.less
+++ b/public/less/rearview.less
@@ -1268,6 +1268,11 @@ hr {
     table.integrations-list td {
         padding: 2px 10px 0 0;
     }
+    
+    fieldset.integration-add-control {
+        margin-top: 45px;
+        margin-right: 100px;
+    }
 
     /* jquery ui style adjustments */
     .ui-widget {
