--- a/public/less/rearview.less
+++ b/public/less/rearview.less
@@ -1269,9 +1269,17 @@ hr {
         padding: 2px 10px 0 0;
     }
     
-    fieldset.integration-add-control {
-        margin-top: 45px;
-        margin-right: 100px;
+    .integration-add-control {
+        margin: 45px 80px 0 15px;
+    }
+    
+    #viewIntegrations {
+        .integration-control {
+            color: #b6b3a6;
+        }
+        input {
+            width: 378px;
+        }
     }
 
     /* jquery ui style adjustments */
