Wired in alertKeys change

--- a/public/templates/alertkeys.hbs
+++ b/public/templates/alertkeys.hbs
@@ -2,9 +2,9 @@
      <fieldset class='monitor-name control-group'>
          <label for='integration-key' class='control-label'>Integration type:</label>
          <select id='integration-key' name='integration-key' class="input-lg">
-             <option value='victorops-key'>VictorOps Key</option>
-             <option value='pagerduty-key'>PagerDuty Key</option>
-             <option value='email-address'>Email Address</option>
+             <option value='victorops'>VictorOps Key</option>
+             <option value='pagerduty'>PagerDuty Key</option>
+             <option value='email'>Email Address</option>
          </select>
      </fieldset>
      <fieldset class='monitor-name control-group'>
