Changed logo on unauthorized page to VO

--- a/app/views/unauthorized.scala.html
+++ b/app/views/unauthorized.scala.html
@@ -23,7 +23,7 @@
         <section id='content' class=''>
             <section class='login-info'>
                 <header>
-                    <img id='rearview-logo' src="@routes.Assets.at("img/login/company-logo.svg")" width='200px' />
+                    <img id='rearview-logo' src="@routes.Assets.at("img/login/company-logo.png")" />
                     <img alt='Rearview' id='product-logo' src="@routes.Assets.at("img/rearview.svg")" />
                     <hgroup>
                         <h1>Rearview</h1>
