Changed logo. Removed input-lg CSS class

--- a/public/templates/alertkeys.hbs
+++ b/public/templates/alertkeys.hbs
@@ -1,7 +1,7 @@
  <form class='clearfix'>
      <fieldset class='monitor-name control-group'>
          <label for='integration-key' class='control-label'>Integration type:</label>
-         <select id='integration-key' name='integration-key' class="input-lg">
+         <select id='integration-key' name='integration-key'>
              <option value='victorops'>VictorOps Key</option>
              <option value='pagerduty'>PagerDuty Key</option>
              <option value='email'>Email Address</option>
