--- a/public/templates/schedulemonitor.hbs
+++ b/public/templates/schedulemonitor.hbs
@@ -4,11 +4,11 @@
         <form id='namePagerForm' class='clearfix' parsely-validate>
             <fieldset class='monitor-name control-group'>
                 <label for='monitorName' class='control-label'>Monitor Name:</label>
-                    <input type='text' id='monitorName' name='monitorName' class='form-control input-lg' required='required' />
+                    <input type='text' id='monitorName' name='monitorName' class='form-control' required='required' />
             </fieldset>
             <fieldset class='description control-group'>
                 <label for='description' class='control-label'>Monitor Description (Not Required):</label>
-                <textarea class='form-control input-lg' id='description' name='description'></textarea>
+                <textarea class='form-control' id='description' name='description'></textarea>
             </fieldset>
 
         </form>
